Git 2.3.8 Installer - released 2015-09-??
-----------------------------------------

* Git v2.3.8
  - update from version 2.3.3
  - include backport of pre-auto-gc-battery hook osx fix
  - include various git instaweb usability enhancements

* TopGit 0.16
  - update from version 0.13.2

* GnuPG 1.4.19
  - update from version 1.4.18

* cURL/libcURL 7.44.0
  - updated from version 7.40.0

* lighttpd 1.4.37
  - updated from version 1.4.35

* PCRE 8.37
  - updated from version 8.35

* libusb 1.0.19
  - updated from version 1.0.18

* libidn 1.30
  - updated from version 1.29

-----------------------------------------
Git 2.3.3 Installer - released 2015-03-19
-----------------------------------------

* Git v2.3.3
  - update from version 2.3.2

* TopGit 0.13.2
  - update from version 0.12


-----------------------------------------
Git 2.3.2 Installer - released 2015-03-07
-----------------------------------------

* Git v2.3.2
  - update from version 2.2.2
  - drop update-server-info fix (included in v2.3.0)
  - drop git-http-push for cURL >= 7.40 fix (included in v2.3.0)
  - drop git apply memory overrun fix (included in v2.3.1)
  - improve compatibility with arbitrary svn installations
  - enable source highlighting when running git instaweb
  - allow git instaweb to be run from a non-toplevel working tree dir
  - allow git instaweb to find submodules with .git gitdir: links
  - enable correct blob_plain mime types with git instaweb
  - enable blame, pathinfo, better diff and utf-8 default in git instaweb
  - add git-browser graphiclog to git instaweb

* GnuPG 1.4.18
  - enable smart card support

* highlight 2.16
  - include to enable git instaweb source highlighting


-----------------------------------------
Git 2.2.2 Installer - released 2015-01-20
-----------------------------------------

* Git v2.2.2
  - updated from version 2.1.4
  - dropped config file a+x fix (included in v2.2.2)
  - dropped reflog reading fix (included in v2.2.2)